--- a/src/main.html
+++ b/src/main.html
@@ -9,6 +9,8 @@
 
 <body>
   <div id="webgl-output">
+    <div class = "timer"></div>
+    <div class = "score"></div>
     <script type="module" src="trab.js"></script>
   </div>
 </body>
